--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: IOS-SImulator
+name: IOS-Simulator
 
 on:
   push:
@@ -13,4 +13,4 @@ jobs:
       - uses: subosito/flutter-action@v1
       - uses: bluefireteam/flutter-gh-pages@v7
         with:
-          baseHref: /IOS-SImulator/
+          baseHref: /IOS-Simulator/
